[package]
name = "cn"
version = "0.1.0"
description = "Convert scans of handwritten notes to PDF"
authors = ["gumienny <mkgumienny@gmail.com>"]

[dependencies]
image = "0.19.0"
clap = { version = "2.32.0", features = ["yaml"] }
fbsep = { git = "https://github.com/gumienny/fbsep.git", rev = "3c02cfc" }
